es6以及less环境设置

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,11 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <div class="main">
+    This is My Home Page!
+  </div>
+  <div class="main">
+    This is My Home Page!
+  </div>
 </body>
 </html>
